--- a/lib/base_library/scss/_reset.scss
+++ b/lib/base_library/scss/_reset.scss
@@ -21,7 +21,7 @@ html {
  *  应用于1024px以下设备
  *  移动设备的基本字体为16px
  */
-$list: (32: (640, 1023), 20.7: (640, 1023), 19.2: (640, 1023), 18.75: (640, 1023), 18: (640, 1023), 16: (640, 1023));
+$list: (32: (640, 1023), 21.2: (424, 639), 20.7: (414, 423), 19.2: (384, 413), 18.75: (375, 383), 18: (360, 374), 16: (320, 359));
 
 @each $size, $sizeList in $list {
     @media screen and (min-width: #{nth($sizeList,1)}px) and (max-width: #{nth($sizeList,2)}px) {
